@@ -4,6 +4,7 @@ Process Hacker
  * NEW/IMPROVED:
    * Set priority and I/O priority for multiple processes at once
    * Added Load Time and Load Reason columns for modules (Windows 8 and above)
+   * Improved handle names for Job and Token objects
    * Added CF Guard (Control Flow Guard) column for processes and modules
    * Added highlighting for AppContainer DLLs
    * Added AppContainer and CF Guard image characteristics to peview
